--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
 			"extensions": [
 				"ms-python.python",
 				"donjayamanne.githistory",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"gruntfuggly.todo-tree"
 			],
 			"settings": {
 				"remote.autoForwardPorts": false
