--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
+asgiref==3.7.2
+cfgv==3.4.0
 crispy-bootstrap5==2023.10
+distlib==0.3.8
 Django==4.2.9
 django-crispy-forms==2.1
 factory-boy==3.3.0
-pytz==pytz-2023.3.post1
+Faker==22.4.0
+filelock==3.13.1
+identify==2.5.33
+iniconfig==2.0.0
+nodeenv==1.8.0
+packaging==23.2
+platformdirs==4.1.0
+pluggy==1.3.0
+pre-commit==3.6.0
 pytest==7.4.4
 pytest-django==4.7.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+six==1.16.0
+sqlparse==0.4.4
+virtualenv==20.25.0
